# Remote_function_call_web_app

./: CMakeLists.txt  Readme  Readme.md
backend/: Client.cc  EvolutionaryClient.cc  EvolutionaryClient.h  EvolutionaryServer.cc  EvolutionaryServer.h  Server.cc  TCPClient.cc  TCPClient.h  TCPServer.cc  TCPServer.h  cec22_test_func.cc  cec22_test_func.h
db/: Database.cc  Database.h  zpr_db.db
frontend/: AdminLogin.cc  AdminLogin.h  AdminPanel.cc  AdminPanel.h  UserRegister.cc  UserRegister.h  Webapp.cc  WebappPage.cc  WebappPage.h  webapp_style.css
install/: wt_installation.sh
tests/: test_AdminLogin.cc  test_AdminPanel.cc  test_Database.cc  test_TCPClient.cc  test_TCPServer.cc  test_UserRegister.cc
